tests/types_first_keyMirror/types_first_keyMirror.exp
Error ------------------------------------------------------------------------------------------------- keyMirror.js:9:9

Cannot assign `key` to `ret[key]` because an index signature declaring the expected key / value type is missing in
object type [1]. [prop-missing]

   keyMirror.js:9:9
   9|     ret[key] = key; // error: no indexed type
              ^^^

References:
   keyMirror.js:4:14
   4|   const ret: $ObjMapi<T, <K>(K) => K> = {};
                   ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:29:2

Cannot cast `literal.foo` to empty because string literal `foo` [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:29:2
   29| (literal.foo: empty); // error, 'foo' </: empty
        ^^^^^^^^^^^

References:
   literal.js:5:30
    5| module.exports = keyMirror({ 'foo': null });
                                    ^^^^^ [1]
   test.js:29:15
   29| (literal.foo: empty); // error, 'foo' </: empty
                     ^^^^^ [2]



Found 2 errors
